@@ -1,7 +1,7 @@
 #/bin/sh
 
 package=ffl
-version=0.7.0
+version=0.8.0
 
 dest=${package}-${version}
 
@@ -21,6 +21,7 @@ mkdir ${dest}/engines/iForth
 mkdir ${dest}/engines/spf
 mkdir ${dest}/engines/flk
 mkdir ${dest}/engines/lxf
+mkdir ${dest}/engines/VFXForth
 
 cp AUTHORS COPYING NEWS README ChangeLog ${dest}
 cp       ffl/*.fs             ${dest}/ffl
@@ -39,6 +40,7 @@ cp   engines/iForth/*.fs      ${dest}/engines/iForth
 cp   engines/spf/*.fs         ${dest}/engines/spf
 cp   engines/flk/*.fs         ${dest}/engines/flk
 cp   engines/lxf/*.fs         ${dest}/engines/lxf
+cp   engines/VFXForth/*.fs    ${dest}/engines/VFXForth
 
 cp      test/nl.po            ${dest}/test
 cp      test/nl.mo            ${dest}/test
@@ -51,6 +53,7 @@ cp   examples/test.xml        ${dest}/examples
 cp   examples/nl.mo           ${dest}/examples
 cp   examples/index.html      ${dest}/examples
 cp   examples/gzipped.gz      ${dest}/examples
+cp   examples/info.xpm        ${dest}/examples
 
 tar cvzf ${package}-${version}.tar.gz ${dest} 
 
@@ -74,6 +77,7 @@ todos  ${dest}/engines/iForth/*.fs
 todos  ${dest}/engines/spf/*.fs
 todos  ${dest}/engines/flk/*.fs
 todos  ${dest}/engines/lxf/*.fs
+todos  ${dest}/engines/VFXForth/*.fs
 
 zip -r ${package}-${version}.zip ${dest}
 
